G Suite: Prevent prices and discount from wrapping (#38416)
* G Suite: Add margin between price and form on Upsell page

* G Suite: Fix wrong CSS values

* G Suite: Refine display of price and discount on Upsell page

--- a/client/components/upgrades/gsuite/gsuite-upsell-card/style.scss
+++ b/client/components/upgrades/gsuite/gsuite-upsell-card/style.scss
@@ -1,14 +1,19 @@
 .gsuite-upsell-card__product-details {
+	margin-bottom: 1.5em;
+}
+
+.gsuite-upsell-card__product-intro {
+	@include breakpoint( '<960px' ) {
+		margin-bottom: 1em;
+	}
+
 	@include breakpoint( '>960px' ) {
 		display: flex;
 	}
 }
 
-.gsuite-upsell-card__product-intro {
-	@include breakpoint( '>960px' ) {
-		max-width: 350px;
-		margin-right: 50px;
-	}
+.gsuite-upsell-card__product-presentation {
+	flex-basis: 55%;
 }
 
 .gsuite-upsell-card__product-name {
